--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,19 @@ a {
   color: #CC0000;
 }
 
+.labmemberphotosbox img{
+  border-radius:50%;
+  max-width:25%;
+  min-width:40px;
+}
+.labmemberphotosbox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.labmemberscontainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  gap: 24px;
+}
