--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,7 @@ a {
   color: #CC0000;
 }
 
-.labmemberphotosbox img{
-  border-radius:50%;
-  max-width:25%;
-  min-width:40px;
-}
+
 .labmemberphotosbox {
   display: flex;
   flex-direction: column;
@@ -85,6 +81,11 @@ a {
 }
 .labmemberscontainer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  gap: 24px;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 25px;
+}
+.labmemberscontainer img{
+  border-radius:50%;
+  max-width:50%;
+  min-width:150px;
 }
